welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value Maths
  return Maths.abs(21-n)
         ^diff21:6: error: not found: value Maths
    return Maths.abs((21-n)*2)
           ^